; ModuleID = '/home/carl/AnghaBench/rofi/source/extr_timings.c_rofi_timings_tick.c'
source_filename = "/home/carl/AnghaBench/rofi/source/extr_timings.c_rofi_timings_tick.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@global_timer = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [29 x i8] c"%4.6f (%2.6f): %s:%s:%-3d %s\00", align 1
@global_timer_last = common dso_local global double 0.000000e+00, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @rofi_timings_tick(i8* %0, i8* %1, i32 %2, i8* %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca double, align 8
  store i8* %0, i8** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  store i8* %3, i8** %8, align 8
  %10 = load i32, i32* @global_timer, align 4
  %11 = call double @g_timer_elapsed(i32 %10, i32* null)
  store double %11, double* %9, align 8
  %12 = load double, double* %9, align 8
  %13 = load double, double* %9, align 8
  %14 = load double, double* @global_timer_last, align 8
  %15 = fsub double %13, %14
  %16 = load i8*, i8** %5, align 8
  %17 = load i8*, i8** %6, align 8
  %18 = load i32, i32* %7, align 4
  %19 = load i8*, i8** %8, align 8
  %20 = call i32 @g_debug(i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str, i64 0, i64 0), double %12, double %15, i8* %16, i8* %17, i32 %18, i8* %19)
  %21 = load double, double* %9, align 8
  store double %21, double* @global_timer_last, align 8
  ret void
}

declare dso_local double @g_timer_elapsed(i32, i32*) #1

declare dso_local i32 @g_debug(i8*, double, double, i8*, i8*, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
